[project]
name = "medical-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.6",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.2",
    "pinecone>=9.0.1",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
]
